--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,6 +6,9 @@
   <title>Error</title>
 </head>
 <body>
-<div><h1>Error</h1></div>
+<div>
+  <h1>Error</h1>
+  <p><%= JSON.stringify(error) %></p>
+</div>
 </body>
 </html>
