--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,8 +47,8 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a target="_blank" href="http://maker.quwj.com/project/10">Pi Dashboard</a></li>
-                            <li><a target="_blank" href="https://github.com/spoonysonny/pi-dashboard">GitHub Source</a></li>
+                            <li><a target="_blank" href="https://github.com/kewell-tsao/pi-dashboard/blob/master/README.md">Pi Dashboard</a></li>
+                            <li><a target="_blank" href="https://github.com/kewell-tsao/pi-dashboard">GitHub Source</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -229,7 +229,7 @@
             <div class="col-md-12">
                 <div id="footer">
                     <hr style="margin: 20px 0 10px 0;" />
-                    <p class="pull-left" style="font-size: 12px;">Powered by <a target="_blank" href="http://maker.quwj.com/project/10"><strong>Pi Dashboard</strong></a> v<%= device.version %>, <a target="_blank" href="http://www.nxez.com">NXEZ.com</a> all rights reserved.
+                    <p class="pull-left" style="font-size: 12px;">Powered by <a target="_blank" href="https://github.com/kewell-tsao/pi-dashboard/blob/master/README.md"><strong>Pi Dashboard</strong></a> v<%= device.version %>, <a target="_blank" href="http://www.nxez.com">NXEZ.com</a> all rights reserved.
                     </p>
                 </div>
             </div>
